@@ -2,7 +2,10 @@
 \docType{class}
 % Classes
 \alias{mi.lm-class}
+% Functions
 \alias{lm.mi}
+% Methods
+\alias{print.mi.lm}
 \alias{display,mi.lm-method}
 
 \title{ Linear Regression Function for Multiply Imputed Dataset }
@@ -11,11 +14,13 @@
 }
 \usage{
 lm.mi(formula, mi.object, ...)
+\S3method{print}{mi.lm}(x, \dots)
 \S4method{display}{mi.lm}(object, digits=2)
 }
 \arguments{
   \item{formula}{ View \code{lm} for detail. }
   \item{mi.object}{ \code{mi} object. }
+  \item{x}{\code{mi.lm} object.}
   \item{object}{\code{mi.lm} object.}
   \item{digits}{number of significant digits to display, default=2.}
   \item{\dots}{ Any option to pass on to \code{lm} function. }
@@ -37,6 +42,7 @@ lm.mi(formula, mi.object, ...)
 
 \author{
   Masanao Yajima  \email{yajima@stat.columbia.edu},
+  Yu-Sung Su \email{ys463@columbia.edu}
   M.Grazia Pittau \email{grazia@stat.columbia.edu},
   Andrew Gelman   \email{gelman@stat.columbia.edu}
 }
@@ -44,14 +50,18 @@ lm.mi(formula, mi.object, ...)
   # true data
   x<-rnorm(100,0,1) # N(0,1)
   y<-rnorm(100,(1+2*x),1.2) # y ~ 1 + 2*x + N(0,1.2)
+ 
   # create artificial missingness
   x[seq(1,100,10)]<-NA
   y[seq(2,98,10)]<-NA
   dat.xy <- data.frame(x,y)
+ 
   # imputation 
   dat.mi <- mi(dat.xy)
+ 
   # fitting linear regression 
-  lm.mi(y~x,dat.mi)
+  fit <- lm.mi(y ~ x, dat.mi)
+  display(fit)
 }
 \seealso{
   \code{\link{mi}}, 
